cc_test(
    name = "example-reverse-conditional",
    srcs = ["example-reverse-conditional.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-gradient-derivatives-using-eigen",
    srcs = ["example-reverse-gradient-derivatives-using-eigen.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-hessian-derivatives-using-eigen",
    srcs = ["example-reverse-hessian-derivatives-using-eigen.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-higher-order-derivatives-multi-variable-function",
    srcs = ["example-reverse-higher-order-derivatives-multi-variable-function.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-higher-order-derivatives-single-variable-function",
    srcs = ["example-reverse-higher-order-derivatives-single-variable-function.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-multi-variable-function-with-parameters",
    srcs = ["example-reverse-multi-variable-function-with-parameters.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-multi-variable-function",
    srcs = ["example-reverse-multi-variable-function.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)

cc_test(
    name = "example-reverse-single-variable-function",
    srcs = ["example-reverse-single-variable-function.cpp"],
    copts = ["-I./"],
    deps = ["//:autodiff"],
)
